<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".PassengerSignInActivity">

    <TextView
        android:id="@+id/passenger_text_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/passenger_sign_in"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        app:errorEnabled="true"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/passenger_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_name"
        android:layout_marginTop="12dp"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/text_input_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        app:counterMaxLength="20"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:hint="@string/user_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="12dp"
        android:id="@+id/text_input_password"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/text_input_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:hint="@string/user_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="12dp"
        android:id="@+id/text_input_confirmation_password"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/text_input_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:hint="@string/Password_confirmation" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_sign_in_driver"
        app:layout_constraintTop_toBottomOf="@id/text_input_confirmation_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="12dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="loginSignUpDriver"
        android:text="Регистрация водителя"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tap_to_login_text_view"
        app:layout_constraintTop_toBottomOf="@id/button_sign_in_driver"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/tap_to_login"
        android:onClick="toggleLoginSignUp"
        android:clickable="true"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>